fix for mobile img size

--- a/css/style.css
+++ b/css/style.css
@@ -477,4 +477,9 @@ p {
             transform: translateX(0);
         }
 
+        .img-container img {
+            min-width: 300px;
+            flex-basis: 80%;
+         }
+
     }
